third_party/rust/rayon-0.8.2/tests/compile-fail/cell_par_iter.rs
extern
crate
rayon
;
use
rayon
:
:
prelude
:
:
*
;
use
std
:
:
cell
:
:
Cell
;
fn
main
(
)
{
let
c
=
Cell
:
:
new
(
42_i32
)
;
(
0_i32
.
.
1024
)
.
into_par_iter
(
)
.
map
(
|
_
|
c
.
get
(
)
)
.
min
(
)
;
}
